--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "tape": "^4.6.3"
   },
   "dependencies": {
+    "baconjs": "^0.7.89",
+    "h": "^0.1.0",
+    "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
