--- a/package.json
+++ b/package.json
@@ -4,21 +4,49 @@
     "private": true,
     "devDependencies": {
         "@types/mocha": "^5.2.5",
-        "cycle-scripts-one-fits-all": "7.2.1",
         "cyclejs-test-helpers": "^4.0.0",
         "husky": "^1.2.0",
         "lint-staged": "^8.1.0",
         "prettier": "^1.15.3",
         "snabbdom-looks-like": "^1.0.5",
-        "snabbdom-pragma": "^2.8.0"
+        "snabbdom-pragma": "^2.8.0",
+        "@types/webpack": "^4.4.21",
+        "@types/webpack-env": "^1.13.6",
+        "@webpack-blocks/assets": "^2.0.0-alpha",
+        "@webpack-blocks/core": "^2.0.0-alpha",
+        "@webpack-blocks/dev-server": "^2.0.0-alpha",
+        "@webpack-blocks/extract-text": "^2.0.0-alpha",
+        "@webpack-blocks/postcss": "^2.0.0-alpha",
+        "@webpack-blocks/sass": "^2.0.0-alpha",
+        "@webpack-blocks/tslint": "^2.0.0-alpha",
+        "@webpack-blocks/typescript": "^2.0.0-alpha",
+        "@webpack-blocks/uglify": "^2.0.0-alpha",
+        "@webpack-blocks/webpack": "^2.0.0-alpha",
+        "autoprefixer": "^9.4.2",
+        "awesome-typescript-loader": "^5.2.1",
+        "clean-webpack-plugin": "^1.0.0",
+        "copy-webpack-plugin": "^4.6.0",
+        "cross-env": "^5.2.0",
+        "html-webpack-harddisk-plugin": "^1.0.1",
+        "html-webpack-plugin": "^3.2.0",
+        "istanbul-instrumenter-loader-fix": "^3.0.2",
+        "mocha": "^5.2.0",
+        "mocha-webpack": "^2.0.0-beta.0",
+        "node-sass": "^4.11.0",
+        "nyc": "^13.1.0",
+        "rimraf": "^2.6.2",
+        "typescript": "~3.2.2",
+        "webpack": "^4.27.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.10",
+        "webpack-merge": "^4.1.5",
+        "webpack-node-externals": "^1.7.2"
     },
     "scripts": {
-        "format": "prettier --write '{src,test}/**/*.{js,jsx,ts,tsx}'",
-        "start": "cycle-scripts start",
-        "test": "cycle-scripts test",
-        "build": "cycle-scripts build",
-        "eject": "cycle-scripts eject",
-        "clean": "cycle-scripts clean"
+        "start": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.js",
+        "test": "cross-env NODE_ENV=test nyc mocha-webpack --colors --webpack-config configs/webpack.config.js test/**/*.test.{js,jsx,ts,tsx}",
+        "build": "cross-env NODE_ENV=production webpack --config configs/webpack.config.js",
+        "clean": "rimraf build .nyc_output coverage"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
@@ -44,11 +72,6 @@
         "reporter": [
             "html",
             "text"
-        ]
-    },
-    "mocha-webpack": {
-        "include": [
-            "test/**/*.test.{js,jsx,ts,tsx}"
         ]
     },
     "dependencies": {
