--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "extends": "@tsconfig/node14/tsconfig.json",
     "compileOnSave": false,
     "compilerOptions": {
         "module": "ES6",
