--- a/package.json
+++ b/package.json
@@ -4,47 +4,44 @@
     "private": true,
     "devDependencies": {
         "@tsconfig/node14": "^1.0.1",
-        "@types/mocha": "^5.2.5",
-        "@types/webpack": "^4.4.21",
-        "@types/webpack-env": "^1.13.6",
-        "@webpack-blocks/assets": "^2.0.0-alpha",
-        "@webpack-blocks/core": "^2.0.0-alpha",
-        "@webpack-blocks/dev-server": "^2.0.0-alpha",
-        "@webpack-blocks/extract-text": "^2.0.0-alpha",
-        "@webpack-blocks/postcss": "^2.0.0-alpha",
-        "@webpack-blocks/sass": "^2.0.0-alpha",
-        "@webpack-blocks/tslint": "^2.0.0-alpha",
-        "@webpack-blocks/typescript": "^2.0.0-alpha",
-        "@webpack-blocks/uglify": "^2.0.0-alpha",
-        "@webpack-blocks/webpack": "^2.0.0-alpha",
-        "autoprefixer": "^9.4.2",
-        "awesome-typescript-loader": "^5.2.1",
-        "clean-webpack-plugin": "^1.0.0",
-        "copy-webpack-plugin": "^4.6.0",
-        "cross-env": "^5.2.0",
+        "@types/mocha": "^8.2.3",
+        "@types/webpack": "^5.28.0",
+        "@types/webpack-env": "^1.16.2",
+        "@webpack-blocks/assets": "^2.1.0",
+        "@webpack-blocks/core": "^2.1.0",
+        "@webpack-blocks/dev-server": "^2.1.0",
+        "@webpack-blocks/extract-text": "^2.1.0",
+        "@webpack-blocks/postcss": "^2.1.0",
+        "@webpack-blocks/uglify": "^2.1.0",
+        "@webpack-blocks/webpack": "^2.1.0",
+        "autoprefixer": "^10.3.0",
+        "copy-webpack-plugin": "^9.0.1",
+        "cross-env": "^7.0.3",
         "cyclejs-test-helpers": "^4.0.0",
-        "html-webpack-harddisk-plugin": "^1.0.1",
-        "html-webpack-plugin": "^3.2.0",
-        "husky": "^1.2.0",
+        "html-webpack-harddisk-plugin": "^2.0.0",
+        "html-webpack-plugin": "^5.3.2",
+        "husky": "^7.0.1",
         "istanbul-instrumenter-loader-fix": "^3.0.2",
-        "lint-staged": "^8.1.0",
-        "mocha": "^5.2.0",
+        "lint-staged": "^11.0.0",
+        "mocha": "^9.0.2",
         "mocha-webpack": "^2.0.0-beta.0",
-        "node-sass": "^4.11.0",
-        "nyc": "^13.1.0",
-        "prettier": "^1.15.3",
-        "rimraf": "^2.6.2",
-        "snabbdom-looks-like": "^1.0.5",
+        "nyc": "^15.1.0",
+        "postcss": "^8.3.5",
+        "postcss-loader": "^6.1.1",
+        "prettier": "^2.3.2",
+        "rimraf": "^3.0.2",
+        "snabbdom-looks-like": "^1.0.6",
         "snabbdom-pragma": "^2.8.0",
-        "typescript": "~3.2.2",
-        "webpack": "^4.27.1",
-        "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.10",
-        "webpack-merge": "^4.1.5",
-        "webpack-node-externals": "^1.7.2"
+        "ts-loader": "^9.2.3",
+        "typescript": "~4.3.5",
+        "webpack": "^5.44.0",
+        "webpack-cli": "^4.7.2",
+        "webpack-dev-server": "^3.11.2",
+        "webpack-merge": "^5.8.0",
+        "webpack-node-externals": "^3.0.0"
     },
     "scripts": {
-        "start": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.js",
+        "start": "cross-env NODE_ENV=development webpack serve --config configs/webpack.config.js",
         "test": "cross-env NODE_ENV=test nyc mocha-webpack --colors --webpack-config configs/webpack.config.js test/**/*.test.{js,jsx,ts,tsx}",
         "build": "cross-env NODE_ENV=production webpack --config configs/webpack.config.js",
         "clean": "rimraf build .nyc_output coverage"
@@ -76,22 +73,20 @@
         ]
     },
     "dependencies": {
-        "@cycle/dom": "^22.3.0",
-        "@cycle/history": "^7.1.0",
-        "@cycle/isolate": "^4.2.0",
-        "@cycle/run": "^5.2.0",
-        "@cycle/state": "^1.1.0",
-        "@cycle/time": "^0.19.0",
+        "@cycle/dom": "^23.0.0",
+        "@cycle/history": "^8.0.0",
+        "@cycle/isolate": "^5.2.0",
+        "@cycle/run": "^5.5.0",
+        "@cycle/state": "^1.5.0",
+        "@cycle/time": "^0.21.0",
         "cyclejs-utils": "^4.0.2",
         "cyclic-router": "^6.0.0",
         "switch-path": "^1.2.0",
-        "xstream": "^11.7.0"
+        "xstream": "^11.14.0"
     },
     "one-fits-all": true,
     "browserslist": [
-        "defaults",
-        "not IE 11",
-        "maintained node versions"
+        "defaults"
     ],
     "engines": {
         "node": ">= 14"
